--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,18 +1,16 @@
 name: cookie_jar
 description: A cookie manager for http requests in Dart, by which you can deal with the complex cookie policy and persist cookies easily.
-version: 1.0.1
-homepage: https://github.com/flutterchina/cookie_jar
-author: wendux <824783146@qq.com>, long1eu<home@long1.eu>
+version: 2.0.0
 
 environment:
-  sdk: '>=1.20.1 <3.0.0'
+  sdk: '>=2.12.0-0 <3.0.0'
 
 #dependencies:
 #  path: ^1.4.1
 
 dev_dependencies:
-  test: ^1.5.1
-  pedantic: '1.1.0'
+  test: ^1.16.2
+  pedantic: ^1.10.0
 #  coverage: "^0.12.4"
 #  dart_codecov_generator:
 #    git:
